# Universal-system-of-speech-recognition

./: .env.example  .gitignore  README.md  gui.py  main.py  pyproject.toml
configs/: models.yaml  models_diarization.yaml  models_whisper.yaml
core/: README.md  __init__.py  hf_catalog.py
core/api/: README.md  __init__.py  transcribe.py
core/config/: README.md  __init__.py  config.py  models_config.py  pipeline_config.py
core/domain/: README.md  __init__.py  pipeline_preset.py  project.py
core/events/: README.md  __init__.py  bus.py  (+1 more)
plugins/: README.md  __init__.py  builtin_manifests.py  loader.py  manifest.py  timestamp_asr.py  transformers_asr.py  transformers_lid.py
tests/: conftest.py  test_all_manifests.py  test_api_transcribe.py  test_asr_routing.py  test_builtin_manifests.py  test_bus_bridge.py  test_collect_manifests.py  test_engine_failure.py  test_engine_resume.py  test_entrypoint_loader.py  test_error_handling.py  test_event_bus.py  test_hf_adapters.py  test_hf_catalog.py  test_lang_model_map.py  test_meeting_report.py  test_min_duration_filter.py  test_model_download_events.py  test_model_registry.py  test_model_stages.py  test_models_config.py  test_pipeline_compatibility.py  test_pipeline_preset_store.py  test_pipeline_primary_source.py  test_pipeline_state.py  test_pipeline_with_registry.py  test_plugin_integration.py  test_plugin_loader.py  test_plugin_manifest.py  test_pyannote_diarization.py  test_run_manager.py  test_stage_registry.py  test_transcribe_worker.py  test_ui_settings.py  test_whisper_asr.py  test_whisper_lid.py
ui/: README.md
(+48 files in other folders)
